practice/5.kubernetes-network/deploy3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy2
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: pgdata
            mountPath: "/var/lib/postgresql/data/"
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: pgdata
