practice/5.kubernetes-network/service_5_dz.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: app1
  type: ClusterIP
