practice/5.kubernetes-network/service_redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
spec:
  ports:
  - port: 3000
    targetPort: 80
  selector:
    app: app2
  type: ClusterIP
